@@ -1,6 +1,8 @@
 v3.7.1-rc.1 (XXXX-XX-XX)
 ------------------------
 
+* Turn off maintenance threads on Coordinators, as they are not needed there.
+
 * Fix spurious lock timeout errors when restoring collections.
 
 * Make sure cluster statistics in web UI work in case a coordinator is down.
